tests/NormalTests/paczka1/fuzzy1/16440738.err
Error in line 3: Otj9 S104 64,0
Error in line 12: EWhzUH3 S104 91,5
Error in line 29: QF8ThY3WQ S803 98,6
Error in line 33: Otj9 S104 22,8
Error in line 31: myb S658 5,9
